trunk/Archive2/75/c091588c55065b/output
main.cpp: In function 'int main()':
main.cpp:16:27: error: no matching function for call to 'q(int (*)(int, int, int), int, int, int)'
     auto r = q(&h, 1, 2, 3);
                           ^
main.cpp:7:9: note: candidate: template<class RetType, class ... ArgTypes> RetType q(std::function<_Res(_ArgTypes ...)>, ArgTypes ...)
 RetType q(function<RetType(ArgTypes...)> f, ArgTypes... args)
         ^
main.cpp:7:9: note:   template argument deduction/substitution failed:
main.cpp:16:27: note:   mismatched types 'std::function<_Res(_ArgTypes ...)>' and 'int (*)(int, int, int)'
     auto r = q(&h, 1, 2, 3);
                           ^
